@@ -1,20 +1,19 @@
 The core modules of pygame are becoming pretty solid. With this
-0.5 release things are quickly approaching the 1.0 mark. After
-this I'm planning to release pygame 0.9 when SDL reaches version
-1.2. (this should happen around end of January). Pygame 0.9 will
-be a release candidate quickly followed by the real 1.0 release.
+0.9 release things areready for the 1.0 mark. After this I'm
+planning to release pygame 0.9 when SDL reaches version 1.2.
+(this should happen around end of January). Pygame 0.9 will be
+a release candidate quickly followed by the real 1.0 release.
 
 At the point it will help to look at pygame as if it were a 1.0
 release and see where it falls short. There's not too much more
-functionality going in before we move along to 1.0. The cursors
-module will get a bit of attention though.
+functionality going in before we move along to 1.0. 
 
 
 At some point it would be nice to add support for more external
-python libraries, here are some ideas
+python libraries, here are some ideas;
 
  * Support for OpenGL (initial testing not so good)
- * Support for Piddle (drawing lines, shapes, text)
+ * more drawing primitives in the draw module
  * Interface with PIL images
  * GUI library. There's a few out there
  * Simple image transforms; flip, rotate-90, double
