@@ -1,5 +1,5 @@
 ##    pygame - Python Game Library
-##    Copyright (C) 2000  Pete Shinners
+##    Copyright (C) 2000-2001  Pete Shinners
 ##
 ##    This library is free software; you can redistribute it and/or
 ##    modify it under the terms of the GNU Library General Public
